basic html for rhino path settings view

--- a/styles/rhino-python.less
+++ b/styles/rhino-python.less
@@ -5,4 +5,13 @@
 @import "ui-variables";
 
 .rhino-python {
+
+}
+
+#RhinoSettingsView li {
+  list-style-type: none;
+}
+
+li.markdelete {
+  text-decoration: line-through;
 }
