fetch python search paths from Rhino

--- a/styles/rhino-python.less
+++ b/styles/rhino-python.less
@@ -12,7 +12,7 @@
   list-style-type: none;
 }
 
-li.markdelete {
-  text-decoration: line-through;
-  //visibility: none;
-}
+// li.markdelete {
+//   text-decoration: line-through;
+//   //visibility: none;
+// }
