add 'RestartScriptEngine' option when saving python paths

--- a/styles/rhino-python.less
+++ b/styles/rhino-python.less
@@ -8,11 +8,14 @@
 
 }
 
-#RhinoSettingsView li {
-  list-style-type: none;
+// #RhinoSettingsView li {
+//   list-style-type: none;
+// }
+#RhinoSettingsView div.title {
+  margin: 5px;
 }
 
-// li.markdelete {
-//   text-decoration: line-through;
-//   //visibility: none;
-// }
+#restartScriptEngineCb {
+  margin-left: 5px;
+  margin-right: 5px;
+}
