add distinction between system (read-only) paths and user paths #MR-1994

--- a/styles/rhino-python.less
+++ b/styles/rhino-python.less
@@ -11,8 +11,12 @@
 // #RhinoSettingsView li {
 //   list-style-type: none;
 // }
-#RhinoSettingsView div.title {
+#RhinoSettingsView span.title {
   margin: 5px;
+}
+
+#RhinoSettingsView ul li.system {
+  color: #6494ed;
 }
 
 #restartScriptEngineCb {
